--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
     </ul>
     <h1>PyBursa</h1>
-    <p>Синдром введения в Web Development</p>
+    <h4>Синдром введения в Web Development</h4>
     <br>
     <table class="table table-bordered">
         <th>Курс</th>
