--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -30,11 +30,11 @@
     <br>
     
     <table class="table table-bordered">
-        <th>№</th>
-        <th>Фамилия Имя</th>
-        <th>Адрес</th>
-        <th>Skype</th>
-        <th>Курсы</th>
+        <th>#</th>
+        <th>фамилия имя</th>
+        <th>адрес</th>
+        <th>skype</th>
+        <th>курсы</th>
         
       <tbody>
         {% for r in students %}
@@ -57,3 +57,5 @@
 
       </tbody>
     </table>
+  </body>
+</html>    
