--- a/templates/index.html
+++ b/templates/index.html
@@ -18,34 +18,22 @@
     </div>
     <div class="jumbotron">
         <h1 class="center">Welcome to PyBursa!!!</h1>
-        <h2 class="center">Description</h2>
-        <p class="center"> It is a very powerful and good courses </p>
-        <p class="center">If you want to know all about Python - ask our expert!</p>
-        <p class="center"><a class="btn btn-primary btn-lg" href="{% url 'contact' %}" role="button">Ask </a></p>
+        <p class="center">
+            It is a very powerful and good courses
+        </p>
     </div>
-    <div class="page-header">
-        <h1 class="center"> <span class="label label-info">We are glad to see you on our site</span> </h1>
-        <p  class="center"> You can learn <span class="green-text">Python</span> with us</p>
-        <h2 class="center">Program</h2>
-        <p class="center">Tell us about you favourite language and we'll tell about you...</p>
-
-        <div class="alert alert-info center" role="alert">We can make you better</div>
-        <p class="right"><span class="label label-primary">Join Us!</span></p>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h2 class="panel-title">Python is</h2>
-        </div>
-        <div class="panel-body">
-             <ul class="list-group">
-                 <li class="list-group-item list-group-item-info">Powerful</li>
-                 <li class="list-group-item list-group-item-warning">Interesting</li>
-                 <li class="list-group-item list-group-item-success">Easy</li>
-                 <li class="list-group-item list-group-item-danger">Simply the best</li>
-             </ul>
-        </div>
-    </div>
-
+        <table class="table">
+            <caption>Check the course from our list</caption>
+            <tr>
+                <th>Название</th>
+                <th>Описание</th>
+            </tr>
+            {% for item in items %}
+            <tr>
+                <td> <a href="courses/{{ item.id }}"> {{ item.name }} </a> </td>
+                <td>{{ item.short_description }}</td>
+            </tr>
+            {% endfor %}
+        </table>
 </body>
 </html>
