--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,9 +32,9 @@
 		<div class="navbar">
 			<div class="navbar-inner">
 			  <ul class="nav">
-			    <li class="active"><a href="{% url 'index_courses' %}">Главная</a></li>
-			    <li><a href="{% url 'contact' %}">Контакты</a></li>
-			    <li><a href="{% url 'student_list' %}">Студенты</a></li>
+			    <li><a href="{% url 'index_courses' %}">Главная</a></li>
+			    <li class="active"><a href="{% url 'contact' %}">Контакты</a></li>
+			    <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
 			  </ul>
 			</div>
 		</div>
