--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'courses:index' %}">Main</a><li>
+            <li class="active"><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
           </ul>
@@ -51,8 +51,9 @@
                   </tr>
                 </thead>
                 <tbody>   
-					          {% for lesson in lessons_list %}
+					          {% for lesson in lessons%}
                       <tr>
+                        <td>{{ lesson.order }}</td>
                         <td>{{ lesson.subject }}</td>
                         <td>{{ lesson.description }}</td>
                       </tr>
