--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'courses:index' %}">Main</a><li>
+            <li class="active"><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
@@ -52,17 +52,13 @@
                 <th>Description</th>
               </tr>
             </thead>
-            <tbody>                  
-                {% block content %}
-                  {% for course in object_list %}
-                  <tr>
-                    <td><a class="out-link" href="{{ course.get_url }}">{{ course.name }}</a></td>
-                    <td>{{ course.short_description }}</td>
-                  </tr>
-                  {% empty %}
-                    <h3>No courses</h3>
-                  {% endfor %}
-                {% endblock %}
+            <tbody>
+              {% for course in courses %}
+                <tr>
+                  <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+                  <td>{{ course.short_description }}</td>
+                </tr>
+              {% endfor %}
             </tbody>
           </table>
         </br>
