--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'courses:index' %}">Main</a><li>
+            <li><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>
           </ul>
@@ -39,7 +39,6 @@
       <div class="starter-template">
       <h1>Student details</h1>
         <div class="container">
-        {% block content %}
               <h2>{{ student.name }} {{ student.surname }}</h2>
               <br>
               <table class="table">
@@ -66,14 +65,13 @@
                 <tr>
                   <td>Courses</td>
                   <td>{% for course in student.courses.all %}
-                          <a class="out-link" href="/courses/{{ course.id }}"> {{ course }}</a>
+                          <a class="out-link" href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
                       {% endfor %}</td>
                   </tr>
                 </tr>
                 </tbody>
               </table>
               </br>
-        {% endblock %}
       </div>
     </div><!-- /.container -->
 
