--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'courses:index' %}">Main</a><li>
+            <li><a href="{% url 'index' %}">Main</a><li>
             <li><a href="{% url 'contact' %}">Contacts</a><li>
             <li class="active"><a href="{% url 'students:list_view' %}">Students</a><li>  
           </ul>
@@ -41,7 +41,6 @@
         <h2>Students list</h2>
         <br></br>
         <br></br>
-        {% block content %}
               <table class="table">
                 <thead>
                   <tr>
@@ -52,13 +51,13 @@
                   </tr>
                 </thead>
                 <tbody>   
-					        {% for student in st_list %}
+					        {% for student in students %}
                       <tr>
-                        <td><a class="out-link" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.name }} {{ student.surname }}</a></td>
+                        <td><a class="out-link" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.surname }} {{ student.name }}</a></td>
                         <td>{{ student.address }}</td>
                         <td>{{ student.skype }}</td>
                         <td>{% for course in student.courses.all %}
-                                <a class="out-link" href="/courses/{{ course.id }}"> {{ course }}</a>
+                                <a class="out-link" href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
                             {% endfor %}</td>
                       </tr>
                   {% empty %}
@@ -66,7 +65,6 @@
                   {% endfor %}
                 </tbody>
               </table>
-        {% endblock %}
       </div>
     </div><!-- /.container -->
 
