--- a/templates/students/list_view.html
+++ b/templates/students/list_view.html
@@ -50,19 +50,21 @@
                     <th>Course</th>
                   </tr>
                 </thead>
-                <tbody>   
-					        {% for student in students %}
-                      <tr>
-                        <td><a class="out-link" href="{% url 'students:list_view' %}{{ student.id }}">{{ student.surname }} {{ student.name }}</a></td>
-                        <td>{{ student.address }}</td>
-                        <td>{{ student.skype }}</td>
-                        <td>{% for course in student.courses.all %}
-                                <a class="out-link" href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
-                            {% endfor %}</td>
-                      </tr>
-                  {% empty %}
-                        <h3>No students</h3>
-                  {% endfor %}
+                <tbody>
+                    {% for student in students %}
+                        <tr>
+                            <td>{{ student.id }}</td>
+                            <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}<a></td>
+                            <td>{{ student.address }}</td>
+                            <td>{{ student.skype }}</td>
+                            <td>{% for course in student.courses.all %}
+                                  <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                                {% endfor %}
+                            </td>
+                        </tr>
+                    {% empty %}
+                          <h3>No students</h3>
+                    {% endfor %}
                 </tbody>
               </table>
       </div>
