--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,11 +19,11 @@
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a class="top_bar" href="{% url 'index' %}">Main</a>
+                    <li><a class="top_bar" href="{% url 'index' %}">Главная</a>
                     </li>
-                    <li class="active"><a class="top_bar" href="{% url 'contact' %}">Contacts</a>
+                    <li class="active"><a class="top_bar" href="{% url 'contact' %}">Контакты</a>
                     </li>
-                    <li><a class="top_bar" href="{% url 'students:list_view' %}">Students</a>
+                    <li><a class="top_bar" href="{% url 'students:list_view' %}">Студенты</a>
                     </li>
                 </ul>
             </div>
@@ -74,9 +74,9 @@
     </div>
     <nav class="container">
         <ul class="pager">
-            <li class="previous"><a href="{% url 'index' %}"><span aria-hidden="true">&larr;</span>Main</a>
+            <li class="previous"><a href="{% url 'index' %}"><span aria-hidden="true">&larr;</span>Главная</a>
             </li>
-            <li class="next"><a href="{% url 'students:list_view' %}">Students<span aria-hidden="true">&rarr;</span></a>
+            <li class="next"><a href="{% url 'students:list_view' %}">Студенты<span aria-hidden="true">&rarr;</span></a>
             </li>
         </ul>
     </nav>
