--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -94,7 +94,7 @@
   
     <nav class="container" id="lin1">
         <ul class="pager">
-            <li class="previous"><a href="{% url 'students:list_view' %}"><span aria-hidden="true">&larr;</span>Students</a>
+            <li class="previous"><a href="{% url 'students:list_view' %}"><span aria-hidden="true">&larr;</span>Студенты</a>
             </li>
         </ul>
     </nav>
