--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -62,7 +62,7 @@
         	</tr>
         	{% endfor %}
 		</table>
-    <nav class="container" id="lin1">
+    <nav class="container">
         <ul class="pager">
             <li class="previous"><a href="{% url 'index' %}"><span aria-hidden="true">&larr;</span>Главная</a>
             </li>
