--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -92,7 +92,7 @@
           {% endfor %}
     </div>
   
-    <nav class="container" id="lin1">
+    <nav class="container">
         <ul class="pager">
             <li class="previous"><a href="{% url 'students:list_view' %}"><span aria-hidden="true">&larr;</span>Студенты</a>
             </li>
