--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -20,11 +20,11 @@
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a class="top_bar" href="{% url 'index' %}">Главня</a>
+                    <li><a href="{% url 'index' %}">Главня</a>
                     </li>
-                    <li><a class="top_bar" href="{% url 'contact' %}">Контакты</a>
+                    <li><a href="{% url 'contact' %}">Контакты</a>
                     </li>
-                    <li><a class="top_bar" href="{% url 'students:list_view' %}?course_id={{courses.id}}">Студенты</a>
+                    <li><a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Студенты</a>
                     </li>
                 </ul>
             </div>
