--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,11 @@
             </div>
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a class="top_bar" href="{% url 'index' %}">Главная</a>
+                    <li><a href="{% url 'index' %}">Главная</a>
                     </li>
-                    <li><a class="top_bar" href="{% url 'contact' %}">Контакты</a>
+                    <li><a href="{% url 'contact' %}">Контакты</a>
                     </li>
-                    <li><a class="top_bar" href="{% url 'students:list_view' %}">Студенты</a>
+                    <li><a href="{% url 'students:list_view' %}">Студенты</a>
                     </li>
                 </ul>
             </div>
