--- a/templates/index.html
+++ b/templates/index.html
@@ -19,76 +19,43 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'index' %}">Main</a></li>
             <li><a href= "{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'students:list_view' %}?course_id={{course_id}}">Students</a></li>
           </ul>
         </div>
       </nav>
     <div class="container">
-      <h1>Description PyBursa</h1>
+      <h1>Ooniversity</h1>
     </div>
     <div class="row">
       <div class="container">
-        <p class="p2">Этот курс знакомит студентов с языком <span class="great">Python</span>. После завершения этого класса, студент сможет писать не тривиальные программы на <span class="great">Python</span>, касающиеся широкого спектра предметных областей. Темы включают языковые компоненты, <span class="great">среда разработки IDLE</span>, конструкции потока управления, строки ввода / вывода, коллекции, классы, модули и регулярные выражения.Курс дополнен многими лабораторными с использованием либо <span class="great">Linux или Windows</span>.</p>
+        <p class="p2"><span class="great">Мы специализируемся</span> на "модных" языках программирования. <span class="great">Принципиальное наше отличие от других курсов</span> - максимум практики и жесткая система обязательных домашних заданий.
+        </p>
       </div>
     </div>
-    <h1>Program</h1>
-    <table class='first_table'>
-      <tr>
-        <th class='first_th'>Занятие
-        </th>
-        <th class='first_th'>Тема
-        </th>
-        <th class='first_th'>Содержание
-        </th>
-      </tr>
-      <tr>
-        <td class="num">1
-        </td>
-        <td class='first_td'>Основы Python
-        </td>
-        <td class='first_td'>
-          <ul>
-            <li><code>zen</code>, <code>pep8</code>, <code>pylint</code>, tools, IDE</li>
-            <li>консоль, типы данных, операторы</li>
-            <li>синтаксис управляющих конструкций (if, for...)</li>
-            <li>исключения и разбор стектрейса</li>
-            <li>кодировка в Python</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td class="num">2
-        </td>
-        <td class='first_td'>Строки и итераторы
-        </td>
-        <td class='first_td'>
-          <ul>
-            <li>работа со строками и итерируемыми типами</li>
-            <li>запуск скрипта и параметры</li>
-            <li><p class="text-primary">git http://try.github.com/levels/</p></li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td class="num">3
-        </td>
-        <td class='first_td'>Функции и модульность
-        </td>
-        <td class='first_td'>
-          <ul>
-            <li>функции (<code>def</code>, <code>lambda</code>)</li>
-            <li>генераторы списков</li>
-            <li>модули, структура</li>
-          </ul>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="3" class="more">
-          <div class="alert alert-success" role="alert" class="text-capitalize">Дальше больше!
-          </div>
-        </td>
-      </tr>
-    </table>
+    <h1>Выбирите курс для обучения</h1>
+    <div class="col-md-10 col-md-push-1">
+      <div class="table-responsive">
+        <table class="table" border=2>
+         
+            <tr>
+              <th>Курс</th>
+              <th>Описание</th>
+            </tr>
+          
+          
+            {% for cour in courses %}
+            <tr>
+              <td>
+                <a href = "{% url 'courses:detail' cour.id %}">{{cour.name}}</a>
+              </td>
+              <td>
+                {{cour.short_description}}
+            </tr>
+            {% endfor %}
+          
+        </table>
+      </div>
+    </div>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>  
