--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     {# <li class="active"><a href="{% url 'index' %}">Main</a></li> #}
-                    <li class="active"><a href="{% url 'index' %}">Main</a></li>
+                    <li><a href="{% url 'index' %}">Main</a></li>
                     <li><a href="{% url 'contact' %}">Contacts</a></li>
                     <li><a href="{% url 'student_list' %}">Students</a></li>
                     <li><a href="{% url 'results' %}">Equation</a></li>
@@ -52,19 +52,27 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well">
-                    <h1>Bursa</h1>
-                    <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
+                    <h1>{{ courses }}</h1>
+                    <p>{{ courses.description }}</p>
                 </div>
                 	
-                <h2>Program</h2>
+                <h2>Program about {{ courses }}</h2>
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th>Курс</th>
+                            <th>#</th>
+                            <th>Тема</th>
                             <th>Описание</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for lesson in lessons %}
+                            <tr>
+                                <td>{{ lesson.order }}</td> 
+                                <td>{{ lesson.subject }}</td> 
+                                <td>{{ lesson.description }}</td> 
+                            </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
