--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,7 +33,7 @@
 			<div class="navbar-inner">
 			  <ul class="nav">
 			    <li><a href="{% url 'index_courses' %}">Главная</a></li>
-			    <li class="active"><a href="{% url 'contact' %}">Контакты</a></li>
+			    <li><a href="{% url 'contact' %}">Контакты</a></li>
 			    <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
 			  </ul>
 			</div>
