--- a/templates/index_courses.html
+++ b/templates/index_courses.html
@@ -20,7 +20,7 @@
 		<div class="navbar">
 			<div class="navbar-inner">
 			  <ul class="nav">
-			    <li class="active"><a href="{% url 'index_courses' %}">Главная</a></li>
+			    <li><a href="{% url 'index_courses' %}">Главная</a></li>
 			    <li><a href="{% url 'contact' %}">Контакты</a></li>
 			    <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
 			  </ul>
