--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -22,7 +22,7 @@
 			  <ul class="nav">
 			    <li><a href="{% url 'index_courses' %}">Главная</a></li>
 			    <li><a href="{% url 'contact' %}">Контакты</a></li>
-			    <li class="active"><a href="{% url 'students:list_view' %}">Студенты</a></li>
+			    <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
 			  </ul>
 			</div>
 		</div>
