--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block change_link %}
+    <li id="menu-item-985"
+        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-985"><a
+            href="{% url 'students:list_view' %}">Студенты</a></li>
+{% endblock %}
+
 {% block banner %}
 
     <div class="container">
