--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -2331,6 +2331,7 @@ th {
 }
 .table-hover > tbody > tr:hover {
   background-color: #f5f5f5;
+  margin:left;
 }
 table col[class*="col-"] {
   position: static;
@@ -2453,6 +2454,7 @@ table th[class*="col-"] {
   overflow-x: auto;
   background-color:#EBEBE3;
   opacity: 1;
+  
 }
 @media screen and (max-width: 767px) {
   .table-responsive {
@@ -5034,7 +5036,7 @@ a.badge:focus {
 .jumbotron p {
   margin-bottom: 15px;
   font-size: 21px;
-  font-weight: 200;
+  font-weight: 50;
   background-color: #290701;
   opacity:0.6;
 }
@@ -5046,7 +5048,7 @@ a.badge:focus {
  border-radius: 6px;
 }
 .jumbotron .container {
-  max-width: 50%;
+  max-width: 100%;
    
 }
 #p {max-width:100%;}
