--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,23 @@
-#pb {color:#290701;}
-.topping_index {background-color:#EBEBE3;margin-top:20px;border:none;height:30px;}
-.des {color:#290701;}
-.panel-default .panel-heading .py_program {color:#290701;background-color:#f0ad4e;}
-.jumbotron .container .head {color:#290701;}
-.jumbotron .container .text {color:#290701;}
-.table-responsive .headtable {background-color:#f0ad4e;}
-.table-responsive .value {background-color:#61B85E; opacity:1;color:#290701;}
-.table-responsive .value2 {background-color:#EE821D; opacity:1;color:#290701;}
-.table-responsive .value3 {background-color:red; opacity:1;color:#290701;}
-.table-responsive .tablelist {background-color:#8EE99C; opacity:1;color:#290701;}
-.table-responsive .tablelist2 {background-color:#E99042; opacity:1;color:#290701;}
-.table-responsive .tablelist3 {background-color:#EE5B5B; opacity:1;color:#290701;}
-.table-responsive .them {background-color:#D7D7D0; opacity:1;color:#290701;}
+#pb { color:#290701; }
+.topping_index { background-color:#EBEBE3;margin-top:20px;border:none;height:30px; }
+.des { color:#290701; } 
+.jumbotron .container .descr{ color:#EBEBE3; background-color:#290701; }
+.panel-default .panel-heading .py_program { color:#290701;background-color:#f0ad4e; }
+.jumbotron .container .head { color:#290701; }
+.jumbotron .container .text { color:#290701;}
+.table-responsive .headtable { background-color:#f0ad4e; }
+.table-responsive .value { background-color:#61B85E; opacity:1;color:#290701; }
+.table-responsive .value2 { background-color:#EE821D; opacity:1;color:#290701; }
+.table-responsive .value3 { background-color:red; opacity:1;color:#290701; }
+.table-responsive .tablelist { background-color:#8EE99C; opacity:1;color:#290701; }
+.table-responsive .tablelist2 { background-color:#E99042; opacity:1;color:#290701; }
+.table-responsive .tablelist3 {background-color:#EE5B5B; opacity:1;color:#290701; }
+.table-responsive .them { background-color:#D7D7D0; opacity:1;color:#290701; }
+.table-hover .course_table { background-color:#f0ad4e; }
+.table-hover .course_name { background-color:#ECD92B;}
+.table-hover .row_table_student {background-color:#EBEBE3;}
+.table-hover {width:100%;}
+.course_id {margin-left:-110px;width:1500px; }
 
 
 
@@ -34,7 +40,8 @@
 .page-header .student-head {color:#290701; margin-left:30px;}
 .below-header {color:#290701; margin-left:30px;}
 .panel-default .panel-heading .course_program {color:#290701;background-color:#f0ad4e;margin-left:15px;}
-.study_table {margin-left:-180px;}
+.study_table {margin-left:-110px;}
+.study_table2 {margin-left:-150px;}
 .table-hover .headtable_student {background-color:#f0ad4e;}
 .table-hover .head_study_table {background-color:#ECD92B;}
 .table-hover .row_table_student {background-color:#EBEBE3;}
