--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Contacts</title>
-    <!-- Bootstrap -->
     {% load staticfiles %}
 +   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 +   <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -20,70 +18,67 @@
   </head>
   <body>
     <hr class="topping_contacts"></hr>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+    	<nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
-        <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-  expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{% url 'index' %}">Main</a>
-        <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
-        <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
-        <a class="navbar-brand" href="{% url 'results' %}">Eq_result</a>
-      </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-    <div class="page-header">
-      <h1 class="contact-head">Contacts</h1>
-        <p class="below-contact">Contact informations of ItBursa Organization</p>
-     </div>
-     <div class="col-sm-6 col-md-4">
-     <div class="thumbnail">
-       <img class="imgd" src="{% static 'images/boss.jpg' %}" alt="...">
-       <div class="caption">
-         <h3 class="d">Director</h3>
-          <p class="d1">Name: Алексей Радченко<br>
-             Skype: <br />
-             Email: <br />
-             Phone:
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <img class="imgm" src="{% static 'images/manadg.jpg' %}" alt="...">
-        <div class="caption">
-          <h3 class="m">Manager</h3>
-          <p class = "m1">Name: Дария Михалевич<br />
-             Skype: darka.darka.darka.darka.<br />
-             Email: daria.mykhalevych@gmail.com<br />
-             Phone:</p>
-        </div>
-      </div>
-    </div>
-    <div class="info">
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <img class="imgf" src="{% static 'images/founder.jpg' %}" alt="...">
-        <div class="caption">
-          <h3 class="f">Founder</h3>
-          <p class= "f1">Name: Павел Обод<br />
-             Skype: azaless<br />
-             Email: itbursa100@gmail.com<br />
-             Phone:
-          </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        	<div class="navbar-header">
+        		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-  expanded="false">
+          		<span class="sr-only">Toggle navigation</span>
+          		<span class="icon-bar"></span>
+          		<span class="icon-bar"></span>
+          		<span class="icon-bar"></span>
+        		</button>
+        		<a class="navbar-brand" href="{% url 'index' %}">Главная</a>
+        		<a class="navbar-brand" href="{% url 'contact' %}">Контакты</a>
+        		<a class="navbar-brand" href="{% url 'students:list_view' %}">Студенты</a>
+      		</div>
+        	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        	</div>
+      	</div>
+    	</nav>
+    	<div class="page-header">
+      	<h1 class="contact-head">Contacts</h1>
+        	<p class="below-contact">Contact informations of ItBursa Organization</p>
+     	</div>
+     	<div class="col-sm-6 col-md-4">
+     	<div class="thumbnail">
+      	<img class="imgd" src="{% static 'images/boss.jpg' %}" alt="...">
+       		<div class="caption">
+        		<h3 class="d">Director</h3>
+          		<p class="d1">Name: Aleksey Radchenko<br>
+            		Skype: <br />
+             		Email: aleksey.radchenko@racoongang.com <br />
+             		Phone: +380979279920
+          		</p>
+        		</div>
+      		</div>
+    		</div>
+    	<div class="col-sm-6 col-md-4">
+      	<div class="thumbnail">
+        	<img class="imgm" src="{% static 'images/manadg.jpg' %}" alt="...">
+        		<div class="caption">
+          		<h3 class="m">Manager</h3>
+          			<p class = "m1">Name: Дария Михалевич<br />
+             			Skype: darka.darka.darka.darka.<br />
+             			Email: daria.mykhalevych@gmail.com<br />
+             			Phone:</p>
+        		</div>
+      		</div>
+    		</div>
+    	<div class="info">
+    	<div class="col-sm-6 col-md-4">
+      	<div class="thumbnail">
+        	<img class="imgf" src="{% static 'images/founder.jpg' %}" alt="...">
+        		<div class="caption">
+          		<h3 class="f">Founder</h3>
+          			<p class= "f1">Name: Павел Обод<br />
+             			Skype: azaless<br />
+             			Email: itbursa100@gmail.com<br />
+             			Phone:
+          			</p>
+          		</div>
+        		</div>
+      		</div>
+    		</div>
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   </body>
 </html>
