--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,21 +26,12 @@
                 <li><a href="{% url 'index' %}">Main</a></li>
                 <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
                 <li><a href="{% url 'student_list' %}">Students</a><li>
-                <li><a href="{% url 'results' %}">Results</a><li>
               </ul>
             </div>
           </div>
         </nav>
       </div>
-    </div>
-    <div class="container">
-      <h3 id="pybursa">
-        <p>
-          Запишись на курсы Python<br>
-          Попади в тренд современной WEB разработки вместе с PyBursa<br>
-        </p>
-      </h3>
-    </div>
+    </div></br></br></br></br></br>
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
