--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -28,7 +28,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{% url 'index' %}">Main</a></li>
                 <li><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'student_list' %}">Students</a></li>
+                <li><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a><li>
               </ul>
             </div>
           </div>
@@ -36,33 +36,33 @@
       </div>
     </div>
 <div>
-  <div class="container"></br></br></br></br></br>
-    <div class="jumbotron">
-          <h1>PyBursa</h1>
-          <p>Наша цель - научить вас языку Python</p>
-          <p>Научись или умри. Мы построили курсы с акцентом на практику</p>
-        </div>
-    <div class="table-responsive">
-          <table class="table table-hover">
-            <caption>What do you want to know?</caption>
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-                  {% for course in courses %}
-                    <tr>
-                      <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-                      <td>{{ course.short_description }}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-            </tbody>
-          </table>
-        </div>
-      </div>
+
+<div class="container">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Theme</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody></br></br></br></br></br>
+      {%for lesson in course.lesson_set.all%}
+        <tr>
+          <td>
+            {{forloop.counter}}
+          </td>
+          <td>
+            {{lesson.theme}}
+          </td>
+          <td>
+            {{lesson.description|truncatechars:200}}
+          </td>
+        </tr>
+      {%endfor%}
+    </tbody>
+  </table>
+  </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
