--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -8,9 +8,11 @@
     <title>Student list</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script type="text/javascript" src="../static/js/mine.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -21,18 +23,16 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li><a href="{% url 'index' %}">Main</a><li>
-                <li><a href="{% url 'contact' %}">Contacts</a><li>
-                <li class="active"><a href="{% url 'student_list' %}">Students</a><li>
-                <li><a href="{% url 'results' %}">Results</a><li>
+                <li><a href="{% url 'index' %}">Main</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
               </ul>
             </div>
           </div>
         </nav>
       </div>
-    </div>
-
-<div class="container">
+  </div>
+    <div class="container marketing"></br></br></br></br></br>
   <h2>Курс PyBursa</h2>
   <p>Ниже представлен список студентов курса PyBursa</p>            
   <table class="table table-bordered">
@@ -84,60 +84,6 @@
     </tbody>
   </table>
 </div>
-
-<div class="hide">
-    <div class="alert alert-success" role="alert">Пора</div>
-    <div class="alert alert-info" role="alert">начинать</div>
-    <div class="alert alert-warning" role="alert">учить</div>
-    <div class="alert alert-danger" role="alert">Python</div>
-    <div class="alert1" role="alert">Python</div>
-    <div class="alert2" role="alert">Python</div>
-
-      <div class="btn-group btn-group-justified" role="group" aria-label="...">
-    <div class="btn-group" role="group">
-      <button type="button" class="btn btn-default">Left</button>
-    </div>
-    <div class="btn-group" role="group">
-      <button type="button" class="btn btn-default">Middle</button>
-    </div>
-    <div class="btn-group" role="group">
-      <button type="button" class="btn btn-default">Right</button>
-    </div>
-    </div>
-
-    <div class="btn-group dropup">
-    <button type="button" class="btn btn-default">Dropup</button>
-    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="caret"></span>
-      <span class="sr-only">Toggle Dropdown</span>
-    </button>
-    <ul class="dropdown-menu">
-      <!-- Dropdown menu links -->
-    </ul>
-  </div>
-
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Basic panel example
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Basic panel example
-        </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Basic panel example
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Basic panel example
-          </div>
-        </div>
-  </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
