--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -15,8 +15,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     
   </head>
-<!-- NAVBAR
-================================================== -->
+
   <body>
   <div>
   <div>
@@ -36,33 +35,44 @@
       </div>
     </div>
 <div>
-  <div class="container"></br></br></br></br></br>
-    <div class="jumbotron">
-          <h1>PyBursa</h1>
-          <p>Наша цель - научить вас языку Python</p>
-          <p>Научись или умри. Мы построили курсы с акцентом на практику</p>
-        </div>
-    <div class="table-responsive">
-          <table class="table table-hover">
-            <caption>What do you want to know?</caption>
-            <thead>
-              <tr>
-                <th>Course</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-                  {% for course in courses %}
-                    <tr>
-                      <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-                      <td>{{ course.short_description }}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-            </tbody>
-          </table>
-        </div>
-      </div>
+<div class="container">
+<table class="table table-bordered">
+    <thead>
+      <tr>
+        <th colspan="2">Информация о студенте</th>
+      </tr>
+    </thead>
+    <tbody></br></br></br></br></br>
+      <tr>
+        <td>Birth Date</td>
+        <td>{{student.birthday}}</td>
+      </tr>
+      <tr>
+        <td>Address</td>
+        <td>{{student.address}}</td>
+      </tr>
+      <tr>
+        <td>E-mail</td>
+        <td>{{student.email}}</td>
+      </tr>
+      <tr>
+        <td>Skype</td>
+        <td>{{student.skype}}</td>
+      </tr>
+      <tr>
+        <td>Phone</td>
+        <td>{{student.phone}}</td>
+      </tr>
+      <td>Courses</td>
+        <td>
+           {%for course in student.courses.all%}
+              <a href="{% url 'courses:detail' course.id %}"> {{ course }}</a>
+           {%endfor%}
+        </td>
+    </tbody>
+  </table>
+</div>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
