Modified app course and students

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,14 +147,14 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="white-text">Get in touch</h5>
+                <h5 class="white-text">Задайте вопрос</h5>
 
-                <form class="col s12" action="contact.php" method="post" id="contactForm">
+                <form class="col s12" action="" method="post" id="contactForm">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="mdi-account-circle prefix white-text"></i>
                             <input id="name" name="name" type="text" class="validate white-text">
-                            <label for="name" class="white-text">Name</label>
+                            <label for="name" class="white-text">Имя</label>
                         </div>
                         <div class="input-field col s6">
                             <i class="mdi-email prefix white-text"></i>
@@ -165,19 +165,18 @@
                             <i class="mdi-pencil prefix white-text"></i>
                             <textarea id="message" name="message" class="materialize-textarea white-text"
                                       style="padding-bottom: 0px;"></textarea>
-                            <label for="message" class="white-text">Message</label>
+                            <label for="message" class="white-text">Сообщение</label>
                         </div>
                         <div class="input-field col s12 offset-m6 m6 l12">
-                            <img src="http://www.android-kiosk.com/wp-content/themes/androidkioskcom/captcha.php"
-                                 class="right" width="45px" style="margin-top:-20px;">
+
                             <i class="mdi-pencil prefix white-text"></i>
                             <input type="text" name="captcha" id="captcha" maxlength="6" size="6"
                                    class="validate white-text">
-                            <label for="captcha" class="white-text">Image Verification</label>
+                            <label for="captcha" class="white-text">Символы с картинки</label>
                         </div>
                         <div class="col offset-s7 s5">
                             <button class="btn waves-effect waves-light white light-green-text text-darken-2 right"
-                                    type="submit">Send
+                                    type="submit">Отправить
                                 <i class="mdi-send right text-darken-2"></i>
                             </button>
                         </div>
@@ -185,35 +184,20 @@
                 </form>
             </div>
             <div class="col offset-l2 l6 s12" style="text-align: right;">
-                <h5 class="white-text">Contact</h5>
+                <h5 class="white-text">Контакты</h5>
                 <ul>
-                    <li><span class="white-text">ProCo IT<br>Unit 3 Castle Road, Chelston Business Park, Wellington, Somerset, TA21 9JQ, UK</span>
+                    <li><span class="white-text">IT Bursa<br>Украина, г.Харьков</span>
                     </li>
                     <li><a href="mailto:support@android-kiosk.com" class="white-text"
-                           style="">support@android-kiosk.com</a></li>
-                    <li><span class="white-text" style="">Tel: +44 (0)7793224070</span></li>
-                    <li><a href="https://play.google.com/store/apps/details?id=com.procoit.kioskbrowser"><img
-                            alt="Get it on Google Play"
-                            src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png"></a></li>
-                    <li><a href="mailto:support@android-kiosk.com" target="_blank"><i class="fa fa-envelope fa-2x right"
-                                                                                      style="color:white;margin-top:10px;"></i></a><a
-                            href="http://www.youtube.com/channel/UCIRzVcBrPTMfCDYQfZJhm6A" target="_blank"><i
-                            class="fa fa-youtube fa-2x right" style="color:white; margin-top:10px"></i></a><a
-                            href="http://plus.google.com/+ProCoIT" target="_blank"><i
-                            class="fa fa-google-plus fa-2x right" style="color:white;margin-top:10px;"></i></a></li>
-                    <!--<li><div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/112075968512143653723" data-rel="publisher"></div></li>-->
-                </ul>
-                <span class="white-text right"
-                      style="font-size:0.7em;clear:both;">Android is a trademark of Google Inc.</span>
+                           style="">itbursa100@gmail.com </a></li>
+                    <li><span class="white-text" style="">Tel: +38(077)1234578</span></li>
+                   </ul>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
         <div class="container">
-            <span class="white-text">© 2015 <a href="http://www.proco-it.com" class="white-text" target="_blank">ProCo
-                IT</a></span>
-            <a class="white-text right" href="http://www.android-kiosk.com/privacy-and-cookie-policy/">Privacy &amp;
-                Cookies Policy</a>
+            <span class="white-text">© 2015 <a href="" class="white-text">IT Bursa</a></span>
         </div>
     </div>
 </footer>
