--- a/courses/templates/courses/list_courses.html
+++ b/courses/templates/courses/list_courses.html
@@ -12,11 +12,8 @@
         <table class="responsive-table bordered centered striped highlight">
             <thead>
             <tr>
-                <th data-field="number">№</th>
-                <th data-field="name">Фамилия Имя</th>
-                <th data-field="address">Адрес</th>
-                <th data-field="skype">Skype</th>
-                <th data-field="courses">Курсы</th>
+                <th data-field="name">Курс</th>
+                <th data-field="descr">Описание</th>
             </tr>
             </thead>
 
