--- a/students/templates/students/list.html
+++ b/students/templates/students/list.html
@@ -10,25 +10,46 @@
     </div>
     <div class="col s12 l12">
 
-        <table class="responsive-table highlight">
-            <thead>
-            <tr>
-                <th data-field="name">Курс</th>
-                <th data-field="descr">Описание</th>
-            </tr>
-            </thead>
+        <div class="card-panel">
+            <span class="card-title grey-text"></span>
 
-            <tbody>
-            {% for course in list_courses %}
-                <tr>
-                    <td>
-                        <a href="{% url 'courses:detail' course.id %}"> {{ course.name }} </a>
-                    </td>
-                    <td>{{ course.short_description }}</td>
-                </tr>
-            {% endfor %}
+            <div class="row">
+                <div class="col s12">
+                    <table class="responsive-table highlight">
+                        <thead>
+                        <tr>
+                            <th data-field="number">№</th>
+                            <th data-field="name">Фамилия Имя</th>
+                            <th data-field="address">Адрес</th>
+                            <th data-field="skype">Skype</th>
+                            <th data-field="courses">Курсы</th>
+                        </tr>
+                        </thead>
 
-            </tbody>
-        </table>
+                        <tbody>
+                        {% for student in all_students %}
+                            <tr>
+                                <td>{{ student.id }}</td>
+                                <td>
+                                    <a href="{% url 'students:detail' student.id %}"> {{ student.surname }} {{ student.name }} </a>
+                                </td>
+                                <td>{{ student.address }}</td>
+                                <td>{{ student.skype }}</td>
+{#                                <td>{{ student.courses.all }}</td>#}
+                                <td>
+                                    <ul>
+                                        {% for course in student.courses.all %}
+                                        <li>{{ course }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        {% endfor %}
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
