--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
                         {% for course in courses %}
                             <tr>
                                 <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td> 
-                                <td>{{ course.description }}</td> 
+                                <td>{{ course.short_description }}</td> 
                             </tr>
                         {% endfor %}
                     </tbody>
