--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,9 +23,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="{% url 'index' %}">Main</a></li>
-          <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-          <li><a href="{% url 'student_list' %}">Students</a></li>
+          <li><a href="{% url 'index' %}">Главная</a></li>
+          <li><a href="{% url 'contact' %}">Контакты</a></li>
+          <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
           </li>
         </ul>
    
