--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -5,59 +5,64 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>PyBursa</title>
-    {% load staticfiles %}
-    
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
    
+    <title>PyStudents</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
     <link rel="shortcut icon" href="{% static 'images/python.ico' %}" type="image/x-icon">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    
   </head>
   <body>
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-         <li><a href="{% url 'index' %}">Главная</a></li>
-         
-         <li><a href="{% url 'contact' %}">Контакты</a></li>
-         <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
-         
-         </li>
+          <li><a href="{% url 'index' %}">Главная</a></li>
+          <li><a href="{% url 'contact' %}">Контакты</a></li>
+          <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+          </li>
         </ul>
-   
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
   <div class="jumbotron">
     <div class="container">
-      <div class="page-header">
-        <h1>ooniversity</h1>
-        <h3>Мы специализируемся на современных языках программирования, которые помогут Вам бытьв тренде разработки сегодня и завтра.<h3>
-     </div>
+      <h1>Список студентов</h1>
+
     </div>
-  </div> 
-  <h2>Выбирай, на каком курсе хочешь учиться!</h2>
+  </div>
+  
+  
   <table class="table table-hover">
     <thead>
       <tr>
-        <th>Курс</th>
-        <th>Описание</th>
+        <th>#</th>
+        <th>Фамилия и имя</th>
+        <th>Адрес</th>
+        <th>Skype</th>
+        <th>курсы</th>
+        
       </tr>
     </thead>
     <tbody>
-      {% for course in courses %}
-        <tr>
-          <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
-          <td>{{ course.short_description }}</td>
+    {% for student in students %}
+      <tr>
+        <td>{{ student.id }}</td>
+        <td><a href="{% url 'students:detail' student.id %}">{{ student.name }} {{ student.surname }}</a></td>
+        <td>{{ student.address }}</td>
+        <td>{{ student.skype }}</td>
+        <td>
+            
+        </td>
         
-        </tr>
-      {% endfor %}
-     </tbody>
+      </tr>
+      
+    {% endfor %}
+    </tbody>
   </table>
-  <div class="alert alert-success" role="alert">P.S. не пожалеешь!</div>
-   
+  
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
