--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -28,16 +28,17 @@
     </div><!-- /.container-fluid -->
   </nav>
   
-  <div class="jumbotron">
-    <div class="container">
-      <h3>{{ student.name }} {{ student.surname }}</h3>
-    </div>
-  </div>
   
+  
+  <div>
+    <h3>{{ student.name }} {{ student.surname }}</h3>
+  </div>
 
   <table class="table table-condensed">
     <thead>
       <tr>
+        
+      
         <th>Информация о студенте</th>
       </tr>
     </thead>
