--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -31,14 +31,12 @@
   
   
   <div>
-    <h3>{{ student.name }} {{ student.surname }}</h3>
+    
   </div>
   
   <table class="table table-condensed">
-    <thead>
+    <thead><h3>{{ student.name }} {{ student.surname }}</h3>
       <tr>
-        
-      
         <th>Информация о студенте</th>
       </tr>
     </thead>
